<resources>
    <string name="app_name">DetecGalaxy</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="grado_escolar">Grado escolar</string>
    <string name="telefono">Telefono</string>
    <string name="nombre_acudiente">Codigo guardian</string>
    <string name="parentesco">Parentesco</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="requerido">Este campo es requerido</string>
    <string name="iguales">IGUALES</string>
    <string name="diferentes">DIFERENTES</string>
    <string name="status_time">Tiempo de la prueba</string>
    <string name="status_point">Puntos de la prueba</string>
    <string name="test_description">Descripcion de la pruba</string>
    <string name="button_opcion">Opcion de respuesta</string>
    <string name="button_reply">respuesta boton</string>
    <string name="exist">Existe</string>
    <string name="not_exist">No existe</string>
    <string name="arrowLeftButton">left button</string>
    <string name="arrowRigthButton">Rigth button</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="ll">LL</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="enie">Ñ</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="rr">RR</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="test_rfn004_instructions">Te voy a mencionar cada vez dos palabras, lo que tendrás que hacer es decirme si las palabras  que escuchaste son iguales o diferente.</string>
    <string name="test_rfn005_instructions">En la parte de arriba de la pantalla vas a encontrar dos flechas, lo que tienes que hacer es buscar y seleccionar las flechas que sean iguales a la flecha verde, siempre y cuando antes vaya una flecha que apunte en la misma dirección que la flecha roja.</string>
    <string name="test_rfn006_instructions">En la pantalla aparecerán unas palabras, algunas son reales y otras inventadas, lo que tienes que hacer es, si la palabra es real presionar el marciano feliz verde, de lo contrario presionar el marciano triste rojo</string>
    <string name="test_rfn007_instructions">Te voy a decir algunas palabras y tendrás que repetirlas después de mí, algunas son reales y otras son inventadas, debes repetirlas todas sin hacer comentarios. No olvides mantener presionado el botón, mientras repites la palabra.</string>
    <string name="test_rfn008_instructions">Te voy a decir unas letras y cuando acabe quiero que las busques en el teclado y las oprimas en el mismo orden que yo te las dije</string>
    <string name="test_rfn009_instructions">Vas a escuchar unas oraciones, una oracion a la vez y tú tienes que presionar el botón verde para decirme si está bien escrita la oración, de lo contrario debes presionar el botón rojo escribir correctamente la oración y presionar el botón verde. </string>
    <string name="escribe_correctamente">Escribir Correctamente</string>
    <string name="recod_audio_permission_denied">Este permiso es necesario para le ejecucion correcta de la aplicación</string>
    <string name="edad_invalida">Por favor introduzca una edad valida</string>
    <string name="nombre_invalido">El nombre es invalido</string>
    <string name="edad_fuera_rango">La edad requerida para usar la aplicación es de 6 a 9 años</string>
    <string name="correo_invalido">El correo ingresado es inválido</string>
    <string name="celular_invalido">El numero de celular es invalido</string>
    <string name="codigo_guardian_invalido">El código de guardián ingresado es inválido</string>
    <string name="loading">Cargando...</string>
    <string name="iniciar">INICIAR</string>
</resources>