<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button30"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button35"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintStart_toEndOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/ñ"
        app:layout_constraintBottom_toTopOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/l"
        app:layout_constraintBottom_toBottomOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/ll"
        app:layout_constraintBottom_toTopOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/m"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/n"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/q"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/r"
        app:layout_constraintBottom_toBottomOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginTop="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/p"
        app:layout_constraintBottom_toTopOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/b"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/g"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/h"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/j"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/k"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/key_margin"
        android:layout_marginLeft="@dimen/key_margin"
        android:layout_marginEnd="@dimen/key_margin"
        android:layout_marginRight="@dimen/key_margin"
        android:layout_marginBottom="@dimen/key_margin"
        android:background="@drawable/ic_key_background"
        android:text="@string/f"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>