<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.umb.myapplication.features.rfn004.ui.viewmodel.Rfn004ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/test_backgroudn"
        tools:context=".features.rfn004.ui.Rfn004Activity">

        <include
            android:id="@+id/statusBar"
            layout="@layout/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="16dp"
            android:layout_tmarginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/button_opcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/buttons_equals_background"
            android:onClick="@{()-> viewmodel.playNext(buttonEquals,buttonDifferent)}"
            android:text="@string/iguales"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <Button
            android:id="@+id/buttonDifferent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/buttons_diferent_background"
            android:onClick="@{()-> viewmodel.playNext(buttonDifferent,buttonEquals)}"
            android:text="@string/diferentes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/prueba"
            android:layout_width="181dp"
            android:layout_height="32dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="272dp"
            android:layout_marginRight="272dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="409dp"
            android:layout_marginBottom="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>